--- a/styles.css
+++ b/styles.css
@@ -1,89 +1,94 @@
 body {
     padding: 0%;
     margin: 0%
+    
 }
 
 .container {
     height: 100vh;
     width: 100%;
-    background-color: #f6a2a2;
+    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
     padding: 0%;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #divid{
+    position: relative;
+    bottom: 160px;
     display: flex;
     justify-content: center;
 }
 
 #hid{
-    text-align: center;
-}
-
+    width: 22ch;
+    animation: typing 2.3s steps(22) , blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    margin: auto;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
 #bid{
-    padding: 10px 20px;
+    padding: 20px 50px;
     font-size: 16px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
     background-color: #007BFF;
     color: white;
-    
+    font-size: x-large;
 }
 
 #bid:hover {
-    background-color: #0056b3;
+    background-color: #042e5b;
+    transform: scale(1.3);
 }
-#main{
+/* #main{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 #blocks{
+    height: fit-content;
+    width: 1000px;
     border: 3px solid black;
     border-radius: 14px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    margin: 50px;  
+    margin: 10px;  
     padding: 20px;
     display: grid;
-    grid-template-columns: 400px 400px 400px;
-    grid-column: 400px 400px; 
+    grid-template-columns: repeat(3, 1fr);
+    grid-column: 300px 300px; 
     gap: 20px;
     font-size: larger;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    position: relative;
+    bottom: 200px;
+    padding: auto;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
-#d1{
-    height: 400px;
-    width: 400px;
+.common{
+    height: 200px;
+    width: 320px;
     background-color: #fff;
-    border: 1px solid beige;
+    border: 3px solid rgb(49, 30, 217);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
-#d2{
-    height: 400px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid beige;
-}
-#d3{
-    height: 400px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid beige;
-    border-radius: 6px;
-}
-#d4{
-    height: 400px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid beige;
-}
-#d5{
-    height: 400px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid beige;
-}
-#d6{
-    height: 400px;
-    width: 4    00px;
-    background-color: #fff;
-    border: 1px solid beige;
+.common:hover{
+    transform: scale(1.08);
 }
