--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
     align-items: center;
 }
 #divid{
-    /* position: relative;
-    bottom: 160px; */
+    position: relative;
+    bottom: 10px;
     display: flex;
     justify-content: center;
 }
@@ -42,7 +42,7 @@ body {
     }
   }
 #bid{
-    padding: 20px 50px;
+    padding: 20px 40px;
     font-size: 16px;
     cursor: pointer;
     border: none;
@@ -62,8 +62,8 @@ body {
     align-items: center;
 } */
 #blocks{
-    height: fit-content;
-    width: 1000px;
+    height: 480px;
+    width: 1050px;
     border: 3px solid black;
     border-radius: 14px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
@@ -74,10 +74,11 @@ body {
     grid-column: 300px 300px; 
     gap: 20px;
     font-size: larger;
-    /* position: relative;
-    bottom: 200px; */
+    position: relative;
+    bottom: 20px; 
     padding: auto;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 .common{
     height: 200px;
