--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
     }
   }
 #bid{
-    padding: 20px 40px;
+    padding: 15px 30px;
     font-size: 16px;
     cursor: pointer;
     border: none;
@@ -50,11 +50,12 @@ body {
     background-color: #007BFF;
     color: white;
     font-size: x-large;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 #bid:hover {
     background-color: #042e5b;
-    transform: scale(1.3);
+    transform: scale(1.15);
 }
 /* #main{
     display: flex;
